# RobotFootballSim

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  config.json
resources/shaders/: image_draw_frag.glsl  image_draw_vert.glsl  rect_draw_frag.glsl  rect_draw_vert.glsl
rfsim/: CMakeLists.txt
rfsim/include/rfsim/: rfsim.h
rfsim/plugins/: BallFollowMovement.cpp  DWAMovement.cpp  DwaMovement.c  RRTMovement.cpp  RandomMovement.cpp
rfsim/sources/: Algorithm.cpp  Algorithm.hpp  AlgorithmManager.cpp  AlgorithmManager.hpp  Game.hpp  GameCommon.hpp  GameState.hpp  Main.cpp  Simulator.cpp  Simulator.hpp
rfsim/sources/graphics/: GraphicsGameState.hpp  GraphicsSceneSettings.hpp  GraphicsServer.cpp  GraphicsServer.hpp  GraphicsSettings.hpp  Image.cpp  Image.hpp  Painter.cpp  Painter.hpp  PainterEngine.cpp  PainterEngine.hpp  PainterItems.hpp  Window.cpp  Window.hpp  WindowManager.cpp  WindowManager.hpp
rfsim/sources/gui/: GuiApplication.cpp  GuiApplication.hpp  GuiInGameMenu.cpp  GuiInGameMenu.hpp  GuiMainMenu.cpp  GuiMainMenu.hpp  GuiMenuBar.cpp  GuiMenuBar.hpp  GuiSimulator.cpp  GuiSimulator.hpp  GuiStyle.hpp  GuiWidget.hpp
rfsim/sources/logic/: Algorithm.cpp  Algorithm.hpp  AlgorithmManager.cpp  AlgorithmManager.hpp  Game.hpp  GameCommon.hpp  GameManager.cpp  GameManager.hpp  GameRule.hpp  GameRulesManager.cpp  GameRulesManager.hpp  GameScenario.hpp
rfsim/sources/opengl/: GLDynamicBuffer.hpp  GLDynamicGeometry.cpp  GLDynamicGeometry.hpp  GLGeometryLayout.hpp  GLShader.cpp  GLShader.hpp  GLTexture.cpp  GLTexture.hpp
rfsim/sources/physics/: PhysicsGameInitInfo.hpp  PhysicsGameProperties.hpp  PhysicsGameState.hpp  PhysicsServer.cpp  PhysicsServer.hpp
rfsim/sources/rules/: BallHit.hpp  CombineAnd.hpp  NoCollisions.hpp  TimeLimit.hpp
rfsim/sources/scenario/: Duel.hpp  RandomScenario.hpp  ScenarioCommon.hpp  Scrum.hpp  TestScenario.hpp
rfsim/sources/shaders/: ImageDraw.hpp  RectDraw.hpp
rfsim/sources/utils/: CircularBuffer.hpp  ConfigManager.cpp  ConfigManager.hpp
